# pickleball-notifier

./: .gitignore  AGENTS.md  Makefile  README.md  api_client.py  config.json.template  config.py  notification_handler.py  pickleball-scraper.logrotate  pyproject.toml  rotate_logs.sh  run_scraper.sh  scraper.py  youtube_checker.py
docs/: architecture.md
pickleball_notifier/: __init__.py
pickleball_notifier/api/: __init__.py  client.py
pickleball_notifier/core/: __init__.py  config.py
pickleball_notifier/notifications/: __init__.py  handler.py
pickleball_notifier/services/: __init__.py  scraper.py
pickleball_notifier/utils/: __init__.py  logging.py
pickleball_notifier/youtube/: __init__.py  checker.py
tests/: __init__.py
tests/api/: test_api_client_batch.py  test_api_client_error_branch.py  test_api_client_parsing.py  test_api_client_remaining_branches.py  test_api_client_requests.py
tests/config/: test_config_additional_branches.py  test_config_load_paths.py  test_config_manager.py  test_config_no_stale.py  test_config_summaries.py
tests/notifications/: test_notification_config_load.py  test_notification_error_branches.py  test_notification_handler.py  test_notification_message_paths.py  test_notification_missing_fields.py
tests/scraper/: test_scraper.py  test_scraper_additional_branches.py  test_scraper_main.py  test_scraper_unreachable_paths.py
tests/shared/: __init__.py  helpers.py  test_logging_utils.py
tests/smoke/: test_lazy_exports.py  test_package_imports.py
tests/youtube/: test_youtube_checker_api.py  test_youtube_checker_config.py  (+2 more)
