[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pickleball-notifier"
version = "0.1.0"
description = "Track configured pickleball player matches and send notifications."
requires-python = ">=3.9"
dependencies = [
  "requests==2.31.0",
  "beautifulsoup4==4.12.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 160
src = ["pickleball_notifier", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
